test/test_examples/syntactic_examples/syntax_error/error_statement_34.zig
// Syntax error: incorrect number of brackets in expression

const ifj = @import("ifj24.zig"); 

pub fn main() void {
   const x  = foo(bar(8,5), 8.48 * (zuu(85));
}